Admin, Session and Member Controllers

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Welcome to 517 page</h1>
+<h1>WELCOME TO OUR LIBAPP APPLICATION WEBPAGE</h1>
 
+<h1>
+  <%= link_to 'Admin login page', "admins/login" %>
+</h1>
