--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,3 +3,7 @@
 <h1>
   <%= link_to 'Admin login page', "admins/login" %>
 </h1>
+
+<h1>
+  <%= link_to 'Member login page', "members/login" %>
+</h1>
