--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -7,7 +7,7 @@
 </h1>
 
 <h1>
-  <%= link_to "Logout", 'admins/logout' %>
+  <%= link_to "Logout", admins_logout_path %>
 </h1>
 <h1>
   <%= link_to "Show my profile", "admins/#{current_admin.id}" %>
@@ -22,5 +22,5 @@
   <%= link_to "Manage all rooms", "rooms" %>
 </h1>
 <h1>
-  <%= link_to "Manage all members", "members" %>
+  <%= link_to "Manage all members", "admins/show/members" %>
 </h1>
