--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -1,8 +1,11 @@
+<h1>Edit Profile</h1>
+
+
 <%= form_for @member do |f| %>
     <% if @member.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(@member.errors.count, "error") %> prohibited
-            this member from being saved:</h2>
+            this admin from being saved:</h2>
           <ul>
             <% @member.errors.full_messages.each do |msg| %>
                 <li><%= msg %></li>
@@ -11,26 +14,23 @@
         </div>
     <% end %>
     <p>
-      <%= f.label :email %><br>
-      <%= f.text_field :email %>
-    </p>
-
-    <p>
       <%= f.label :name %><br>
       <%= f.text_field :name %>
     </p>
 
     <p>
-      <%= f.label :password %><br>
-      <%= f.password_field :password %>
+      <%= f.label :email %><br>
+      <%= f.text_area :email %>
     </p>
 
     <p>
-      <%= f.label :password_confirmation %><br>
-      <%= f.password_field :password_confirmation %>
+      <%= f.label :password %><br>
+      <%= f.text_area :password %>
     </p>
 
     <p>
       <%= f.submit %>
     </p>
 <% end %>
+
+<%= link_to 'Back to member', members_path %>
