bootstrap view added

--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -1,5 +1,86 @@
-<h1>Create a new member</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Room App</title>
 
-<%= render 'form' %>
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body class="login-bg">
+  	<div class="header">
+	     <div class="container">
+	        <div class="row">
+	           <div class="col-md-12">
+	              <!-- Logo -->
+	              <div class="logo">
+	                 <h1><a href="index.html">Room App</a></h1>
+	              </div>
+	           </div>
+	        </div>
+	     </div>
+	</div>
 
-<%= link_to 'Back', members_path %>
+	<div class="page-content container">
+		<div class="row">
+			<div class="col-md-4 col-md-offset-4">
+				<div class="login-wrapper">
+			        <div class="box">
+			            <div class="content-wrap">
+			                <h6>Sign Up</h6>
+			                <h1>Create a new member</h1>
+
+							<%= form_for @member do |f| %>
+							    <% if @member.errors.any? %>
+							        <div id="error_explanation">
+							          <h2><%= pluralize(@member.errors.count, "error") %> prohibited
+							            this member from being saved:</h2>
+							          <ul>
+							            <% @member.errors.full_messages.each do |msg| %>
+							                <li><%= msg %></li>
+							            <% end %>
+							          </ul>
+							        </div>
+							    <% end %>
+							    <p>
+							      <%= f.label :email %><br>
+							      <%= f.text_field :email %>
+							    </p>
+							
+							    <p>
+							      <%= f.label :name %><br>
+							      <%= f.text_field :name %>
+							    </p>
+							
+							    <p>
+							      <%= f.label :password %><br>
+							      <%= f.password_field :password %>
+							    </p>
+							
+							    <p>
+							      <%= f.label :password_confirmation %><br>
+							      <%= f.password_field :password_confirmation %>
+							    </p>
+							
+							    <p>
+							      <%= f.submit%>
+							    </p>
+							<% end %>            
+			            </div>
+			        </div>
+
+			        <div class="already">
+			            <p>Have an account already?</p>
+			            <%= link_to 'Login as member', members_login_path %>
+			            <%= link_to 'Login as admin', admins_login_path %> </br>
+			            <%= link_to 'Back', members_path %>
+			        </div>
+			    </div>
+			</div>
+		</div>
+	</div>
+  </body>
+</html>
