--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -17,7 +17,17 @@
 
     <p>
       <%= f.label :name %><br>
-      <%= f.text_area :name %>
+      <%= f.text_field :name %>
+    </p>
+
+    <p>
+      <%= f.label :password %><br>
+      <%= f.password_field :password %>
+    </p>
+
+    <p>
+      <%= f.label :password_confirmation %><br>
+      <%= f.password_field :password_confirmation %>
     </p>
 
     <p>
