--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -12,46 +12,11 @@
     <![endif]-->
   </head>
   <body>
-  	<div class="header">
-	     <div class="container">
-	        <div class="row">
-	           <div class="col-md-5">
-	              <!-- Logo -->
-	              <div class="logo">
-	                 <h1><a href="index.html">Room App</a></h1>
-	              </div>
-	           </div>
-	           <div class="col-md-5">
-	              <div class="row">
-	                <div class="col-lg-12">
-	                  <div class="input-group form">
-	                       <input type="text" class="form-control" placeholder="Search...">
-	                       <span class="input-group-btn">
-	                         <button class="btn btn-primary" type="button">Search</button>
-	                       </span>
-	                  </div>
-	                </div>
-	              </div>
-	           </div>
-	        </div>
-	     </div>
-	</div>
+  	<%= render 'navbar' %>
 
     <div class="page-content">
     	<div class="row">
-		  <div class="col-md-2">
-		  	<div class="sidebar content-box" style="display: block;">
-                <ul class="nav">
-                    <!-- Main menu -->
-                    <li class="/admins/index"><a href="index.html"><i class="glyphicon glyphicon-home"></i> Dashboard</a></li>
-                    <li><a href="admins/<%= current_admin.id %>/edit"><i class="glyphicon glyphicon-cog"></i> Profile</a></li>
-                    <li><a href="admins/show/admins"><i class="glyphicon glyphicon-user"></i> Admins</a></li>
-                    <li><a href="rooms"><i class="glyphicon glyphicon-calendar"></i> Rooms</a></li>
-                    <li><a href="admins/show/members"><i class="glyphicon glyphicon-user"></i> Members</a></li>
-                    <li><a href="<%= admins_logout_path %>"><i class="glyphicon glyphicon-hand-right"></i> Logout</a></li>
-                </ul>
-             </div>
-		  </div>
+		  <%= render 'menu' %>
 		  <div class="col-md-10">
 		  	<div class="row">
 		  		<div class="col-md-6 panel-warning">
