--- a/app/views/rooms/edit.html.erb
+++ b/app/views/rooms/edit.html.erb
@@ -1,5 +1,40 @@
-<h1>Edit admin</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Room App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+  	<%= render 'navbar' %>
 
-<%= render 'form' %>
+    <div class="page-content">
+    	<div class="row">
+		  <%= render 'menu' %>
+		  <div class="col-md-10">
+	        <%= render 'form' %>
+	        <hr>
+		  </div>
+		</div>
+    </div>
+    
+    
+   
+    <footer>
+         <div class="container">
+         
+            <div class="copy text-center">
+               Copyright 2014 <a href='#'>Website</a>
+            </div>
+            
+         </div>
+      </footer>
 
-<%= link_to 'Back', admins_path %>
+  </body>
+</html>
