--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,35 +1,9 @@
-<!-- <h1>MEMBER INDEX WEBPAGE</h1>
-
-<h1>
-  <% if current_member %>
-      Current member name is <%= current_member.name %>
-  <% end %>
-</h1>
-
-<h1>
-  <%= link_to "Logout", 'members/logout' %>
-</h1>
-
-<h1>
-<%= link_to 'Show Profile', member_path(current_member) %>
-</h1>
-
-<h1>
-  <%= link_to 'Edit Profile', edit_member_path(current_member) %>
-</h1> -->
-
 <!DOCTYPE html>
 <html>
   <head>
     <title>Room App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
- 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
+
   </head>
   <body>
   	<div class="header">
@@ -38,7 +12,7 @@
 	           <div class="col-md-5">
 	              <!-- Logo -->
 	              <div class="logo">
-	                 <h1><a href="index.html">Room App</a></h1>
+	                 <h1><a href="/">Room App</a></h1>
 	              </div>
 	           </div>
 	           <div class="col-md-5">
@@ -63,130 +37,41 @@
 		  	<div class="sidebar content-box" style="display: block;">
                 <ul class="nav">
                     <!-- Main menu -->
-                    <li class="/admins/index"><a href="index.html"><i class="glyphicon glyphicon-home"></i> Dashboard</a></li>
-                    <li><a href="<%= edit_member_path(current_member) %>"><i class="glyphicon glyphicon-cog"></i> Profile</a></li>
-                    <!-- <li><%= link_to 'Edit Profile', edit_member_path(current_member), class: "glyphicon glyphicon-hand-right"%></li> -->
-                    <li><a href="/admins/manage"><i class="glyphicon glyphicon-user"></i> Admins</a></li>
-                    <li><a href="/admins/rooms"><i class="glyphicon glyphicon-calendar"></i> Rooms</a></li>
-                    <li><a href="/admins/manage"><i class="glyphicon glyphicon-user"></i> Members</a></li>
-                    <li><a href="members/logout"><i class="glyphicon glyphicon-hand-right"></i> Logout</a></li>
+                    <li><a href="<%= edit_member_path(current_member) %>"><i class="glyphicon glyphicon-cog"></i> Profile </a></li>
+                    <li><a href="/reservations"><i class="glyphicon glyphicon-calendar"></i> Reservation </a></li>
+                    <li><a href="/members/logout"><i class="glyphicon glyphicon-hand-right"></i> Logout </a></li>
                 </ul>
              </div>
 		  </div>
 		  <div class="col-md-10">
-		  	<div class="row">
-		  		<div class="col-md-6 panel-warning">
-		  			<div class="content-box-header panel-heading">
-			  			<div class="panel-title">Administrator Rules</div>
-				  	</div>
-		  			<div class="content-box-large box-with-header">
-		  				<div class="panel-body">
-		  					The role of administrator involves a great deal of multitasking. You will work with teams, oversee the operations within your company, manage groups, coordinate with management and engage in planning according to the needs of your company. If there are office resource or administrative issues, you will be the person expected to deal with them.
-				  			<br /><br />
-				  			The community is a big family, every administrator must follow the administration rule for the Room App management department. If you are still not familiar of what the rule is for being a administratior, click the link below and see what we defined for our rule.
-				  			<br /><br />
-							<p><a class="btn btn-primary btn-lg" href="http://www.merriam-webster.com/dictionary/rule" role="button">Administration Rules</a></p>
-		  				</div>
-		  			</div>
-		  		</div>
 
-		  		<div class="col-md-6">
-		  			<div class="row">
-		  				<div class="col-md-12">
-		  					<div class="content-box-header">
-			  					<div class="panel-title">Latest News </div>
-				  			</div>
-				  			<div class="content-box-large box-with-header">
-					  			"Experiencing King” weekend features unique performances and exhibits"
-					  			<br /><br />
-					  			The NCSU Libraries is proud to be a presenting partner in “Experiencing King at NC State University,” a campus-wide weekend of public events and exhibits, September 16-17.
-								<br /><br />
-								<p><a class="btn btn-primary btn-sm" href="http://www.lib.ncsu.edu/news/%E2%80%9Cexperiencing-king%E2%80%9D-weekend-features-unique-performances-and-exhibits" role="button">See</a></p>
-							</div>
-		  				</div>
-		  			</div>
-		  			<div class="row">
-		  				<div class="col-md-12">
-		  					<div class="content-box-header">
-			  					<div class="panel-title">Room App Broadcast</div>
-				  			</div>
-				  			<div class="content-box-large box-with-header">
-				  				"MilkShake" has just been promoted to administrator by supervisor "Admin".
-				  				<br /><br />
-					  			- 2016/9/18
-					  			<br /><br />
-					  			"Admin" has set the status of room 3271 into "Busy"
-					  			<br /><br />
-					  			-2016/8/15 
-							</div>
-		  				</div>
-		  			</div>
-		  		</div>
-		  	</div>
-
-	        <!-- Title -->
-	        <div class="row">
-	            <div class="col-lg-12">
-	                <h3>Available rooms</h3>
-	            </div>
-	        </div>
-	        <!-- /.row -->
-	
 	        <!-- Page Features -->
 	        <div class="row text-center">
 	
-	            <div class="col-md-3 col-sm-6 hero-feature">
+	            <div class="col-md-6 hero-feature">
 	                <div class="thumbnail">
 	                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Hunt_Library_Study_Rooms.JPG/800px-Hunt_Library_Study_Rooms.JPG" alt="">
 	                    <div class="caption">
 	                        <h3>James B.Hunt Jr.Library</h3>
-	                        <p>Room 3123</p>
 	                        <p>
-	                            <a href="#" class="btn btn-primary">Reserve</a> <a href="#" class="btn btn-default">More Info</a>
+	                            <a href="#" class="btn btn-primary">Reserve Study Rooms</a>
 	                        </p>
 	                    </div>
 	                </div>
 	            </div>
 	
-	            <div class="col-md-3 col-sm-6 hero-feature">
-	                <div class="thumbnail">
-	                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Hunt_Library_Study_Rooms.JPG/800px-Hunt_Library_Study_Rooms.JPG" alt="">
-	                    <div class="caption">
-	                        <h3>James B.Hunt Jr.Library</h3>
-	                        <p>Room 2001</p>
-	                        <p>
-	                            <a href="#" class="btn btn-primary">Reserve</a> <a href="#" class="btn btn-default">More Info</a>
-	                        </p>
-	                    </div>
-	                </div>
-	            </div>
-	
-	            <div class="col-md-3 col-sm-6 hero-feature">
+	            <div class="col-md-6 hero-feature">
 	                <div class="thumbnail">
 	                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Hunt_Library_Study_Rooms.JPG/800px-Hunt_Library_Study_Rooms.JPG" alt="">
 	                    <div class="caption">
 	                        <h3>D.H.Hill Library</h3>
-	                        <p>Room A204</p>
 	                        <p>
-	                            <a href="#" class="btn btn-primary">Reserve</a> <a href="#" class="btn btn-default">More Info</a>
+	                            <a href="#" class="btn btn-primary">Reserve Study Rooms</a>
 	                        </p>
 	                    </div>
 	                </div>
 	            </div>
-	
-	            <div class="col-md-3 col-sm-6 hero-feature">
-	                <div class="thumbnail">
-	                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Hunt_Library_Study_Rooms.JPG/800px-Hunt_Library_Study_Rooms.JPG" alt="">
-	                    <div class="caption">
-	                        <h3>D.H.Hill Library</h3>
-	                        <p>Room B801</p>
-	                        <p>
-	                            <a href="#" class="btn btn-primary">Reserve</a> <a href="#" class="btn btn-default">More Info</a>
-	                        </p>
-	                    </div>
-	                </div>
-	            </div>
-	
+
 	        </div>
 	        
 	        <!-- /.row -->
@@ -196,18 +81,14 @@
 		  </div>
 		</div>
     </div>
-    
-    
-   
-    <footer>
-         <div class="container">
-         
-            <div class="copy text-center">
-               Copyright 2014 <a href='#'>Website</a>
-            </div>
-            
-         </div>
-      </footer>
+
+    <footer class="navbar-fixed-bottom">
+       <div class="container">
+          <div class="copy text-center">
+             Library Reservation System
+          </div>
+       </div>
+    </footer>
 
   </body>
 </html>
