--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -717,3 +717,7 @@ body {
     width: 12.5%;
   }
 }
+
+.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
+  background-color: greenyellow;
+}
