--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -38,7 +38,7 @@
                 <ul class="nav">
                     <!-- Main menu -->
                     <li><a href="<%= edit_member_path(current_member) %>"><i class="glyphicon glyphicon-calendar"></i>Profile</a></li>
-                    <li><a href="/reservations"><i class="glyphicon glyphicon-list"></i>Rooms</a></li>
+                    <li><a href="/schedules"><i class="glyphicon glyphicon-list"></i>Rooms</a></li>
                     <li><a href="/members/logout"><i class="glyphicon glyphicon-pencil"></i>Logout</a></li>
                 </ul>
              </div>
