--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -67,91 +67,9 @@
 		  			</div>
 		  		</div>
 		  	</div>
-
-	        <!-- Title -->
-	        <div class="row">
-	            <div class="col-lg-12">
-	                <h3>Available rooms</h3>
-	            </div>
-	        </div>
-	        <!-- /.row -->
-	
-	        <!-- Page Features -->
-	        <div class="row text-center">
-	
-	            <div class="col-md-3 col-sm-6 hero-feature">
-	                <div class="thumbnail">
-	                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Hunt_Library_Study_Rooms.JPG/800px-Hunt_Library_Study_Rooms.JPG" alt="">
-	                    <div class="caption">
-	                        <h3>James B.Hunt Jr.Library</h3>
-	                        <p>Room 3123</p>
-	                        <p>
-	                            <a href="#" class="btn btn-primary">Reserve</a> <a href="#" class="btn btn-default">More Info</a>
-	                        </p>
-	                    </div>
-	                </div>
-	            </div>
-	
-	            <div class="col-md-3 col-sm-6 hero-feature">
-	                <div class="thumbnail">
-	                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Hunt_Library_Study_Rooms.JPG/800px-Hunt_Library_Study_Rooms.JPG" alt="">
-	                    <div class="caption">
-	                        <h3>James B.Hunt Jr.Library</h3>
-	                        <p>Room 2001</p>
-	                        <p>
-	                            <a href="#" class="btn btn-primary">Reserve</a> <a href="#" class="btn btn-default">More Info</a>
-	                        </p>
-	                    </div>
-	                </div>
-	            </div>
-	
-	            <div class="col-md-3 col-sm-6 hero-feature">
-	                <div class="thumbnail">
-	                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Hunt_Library_Study_Rooms.JPG/800px-Hunt_Library_Study_Rooms.JPG" alt="">
-	                    <div class="caption">
-	                        <h3>D.H.Hill Library</h3>
-	                        <p>Room A204</p>
-	                        <p>
-	                            <a href="#" class="btn btn-primary">Reserve</a> <a href="#" class="btn btn-default">More Info</a>
-	                        </p>
-	                    </div>
-	                </div>
-	            </div>
-	
-	            <div class="col-md-3 col-sm-6 hero-feature">
-	                <div class="thumbnail">
-	                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Hunt_Library_Study_Rooms.JPG/800px-Hunt_Library_Study_Rooms.JPG" alt="">
-	                    <div class="caption">
-	                        <h3>D.H.Hill Library</h3>
-	                        <p>Room B801</p>
-	                        <p>
-	                            <a href="#" class="btn btn-primary">Reserve</a> <a href="#" class="btn btn-default">More Info</a>
-	                        </p>
-	                    </div>
-	                </div>
-	            </div>
-	
-	        </div>
-	        
-	        <!-- /.row -->
-	
-	        <hr>
-
 		  </div>
 		</div>
     </div>
-    
-    
-   
-    <footer>
-         <div class="container">
-         
-            <div class="copy text-center">
-               Copyright 2014 <a href='#'>Website</a>
-            </div>
-            
-         </div>
-      </footer>
-
+   <%= render 'footer' %>
   </body>
 </html>
