--- a/app/views/rooms/edit.html.erb
+++ b/app/views/rooms/edit.html.erb
@@ -13,7 +13,6 @@
   </head>
   <body>
   	<%= render 'navbar' %>
-
     <div class="page-content">
     	<div class="row">
 		  <%= render 'menu' %>
@@ -23,18 +22,6 @@
 		  </div>
 		</div>
     </div>
-    
-    
-   
-    <footer>
-         <div class="container">
-         
-            <div class="copy text-center">
-               Copyright 2014 <a href='#'>Website</a>
-            </div>
-            
-         </div>
-      </footer>
-
+	<%= render 'footer' %>
   </body>
 </html>
