--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -22,15 +22,6 @@
 		  </div>
 		</div>
     </div>
-    <footer>
-         <div class="container">
-         
-            <div class="copy text-center">
-               Copyright 2014 <a href='#'>Website</a>
-            </div>
-            
-         </div>
-      </footer>
-
+    <%= render 'footer' %>
   </body>
 </html>
