--- a/app/views/admins/show_admins.html.erb
+++ b/app/views/admins/show_admins.html.erb
@@ -34,7 +34,7 @@
 							    <th>Name</th>
 							    <th>Level</th>
 							    <th>Status</th>
-							    <th colspan="2"></th>
+							    <th colspan="3"></th>
 							</tr>
 						</thead>
 						<tbody>
@@ -56,15 +56,6 @@
 		  </div>
 		</div>
     </div>
-
-    <footer>
-         <div class="container">
-         
-            <div class="copy text-center">
-               Copyright 2014 <a href='#'>Website</a>
-            </div>
-            
-         </div>
-      </footer>
+	<%= render 'footer' %>
   </body>
 </html>
