--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_for @room do |f| %>
-    <% if @room.errors.any? %>
+<%= bootstrap_form_for(@room) do |f| %>
+	<% if @room.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(@room.errors.count, "error") %> prohibited
             this room from being saved:</h2>
@@ -11,26 +11,16 @@
         </div>
     <% end %>
     <p>
-      <%= f.label :number %><br>
-      <%= f.text_field :number %>
+      <%= f.text_field :number, class: "form-control" %>
     </p>
-
     <p>
-      <%= f.label :size %><br>
-      <%= f.text_area :size %>
+      <%= f.text_area :size, class: "form-control" %>
     </p>
-
     <p>
-      <%= f.label :building %><br>
-      <%= f.text_area :building %>
+      <%= f.text_area :building, class: "form-control" %>
     </p>
-
     <p>
-      <%= f.label :admin %><br>
-      <%= f.text_area :admin %>
+      <%= f.text_area :admin, class: "form-control" %>
     </p>
-
-    <p>
-      <%= f.submit %>
-    </p>
+	<%= f.submit "Submit", class: "btn btn-primary" %>
 <% end %>
