--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -57,15 +57,6 @@
 		  </div>
 		</div>
     </div>
-
-    <footer>
-         <div class="container">
-         
-            <div class="copy text-center">
-               Copyright 2014 <a href='#'>Website</a>
-            </div>
-            
-         </div>
-      </footer>
+	<%= render 'footer' %>
   </body>
 </html>
