Reservation System completeted

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -719,5 +719,5 @@ body {
 }
 
 .table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
-  background-color: greenyellow;
+  background-color: lightblue;
 }
