--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -29,7 +29,7 @@
 	           </div>
 	        </div>
 	     </div>
-	</div>
+	  </div>
 
     <div class="page-content">
     	<div class="row">
@@ -45,29 +45,33 @@
              </div>
 		  </div>
 		  <div class="col-md-10">
-	  			<div class="row">
-	  				<div class="col-md-10">
-	  					<div class="content-box-large">
-			  				<div class="panel-body">
+        <div class="page-content container">
+          <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+              <div class="login-wrapper">
+                <div class="box">
+                  <div class="content-wrap">
 
-                  <% if @member.errors.any? %>
-                    <ul>
-                      <% @member.errors.full_messages.each do |msg| %>
-                          <li><h1><%= msg %></h1></li>
-                      <% end %>
-                    </ul>
-                  <% end %>
-                  <%= bootstrap_form_for(@member) do |f| %>
-                      <%= f.text_field :name %>
-                      <%= f.email_field :email %>
-                      <%= f.password_field :password %>
-                      <%= f.submit "Update profile" %>
-                  <% end %>
+                    <% if @member.errors.any? %>
+                        <ul>
+                          <% @member.errors.full_messages.each do |msg| %>
+                              <li><h1><%= msg %></h1></li>
+                          <% end %>
+                        </ul>
+                    <% end %>
+                    <%= bootstrap_form_for(@member) do |f| %>
+                        <%= f.text_field :name %>
+                        <%= f.email_field :email %>
+                        <%= f.password_field :password %>
+                        <%= f.submit "Update profile" %>
+                    <% end %>
 
-			  				</div>
-			  			</div>
-	  				</div>
-	  			</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 		  </div>
 		</div>
     </div>
